Fixed display users tables on smaller screens
On smaller screen the adminn doesnt sees all columns of the table

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -452,6 +452,10 @@ svg {
         margin-top: 20px;
         position: absolute;
     }
+
+    .mobile-hidden {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 480px) {
